--- a/nginx.conf
+++ b/nginx.conf
@@ -10,9 +10,12 @@ http {
     vhost_traffic_status_zone;
     proxy_connect_timeout 8s;
     proxy_next_upstream error timeout http_500;
+    #proxy_next_upstream_timeout 3s;
+    proxy_read_timeout 3s;
     upstream servers {
-        server server_1:80 fail_timeout=5s;
-        server server_2:80 backup;
+        #server server_html_error:80 fail_timeout=5s;
+        server server_slow:80;
+        server server_html:80 backup;
         keepalive 16;
     }
 
